<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262626"
    tools:context="com.example.android.taylorsbutchers.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/neuton"
            android:shadowColor="#ffffff"
            android:shadowDx="2.5"
            android:shadowDy="2.5"
            android:shadowRadius="2.6"
            android:text="taylor's"
            android:textAllCaps="true"
            android:textColor="#a37943"
            android:textSize="64sp"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:background="#a37943"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/neuton"
            android:shadowColor="#ffffff"
            android:shadowDx="2.5"
            android:shadowDy="2.5"
            android:shadowRadius="2.6"
            android:text="family butchers"
            android:textAllCaps="true"
            android:textColor="#a37943"
            android:textSize="32sp"
            android:layout_marginBottom="32dp"/>


        <ImageView
            android:layout_width="202dp"
            android:layout_height="287dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#a37943"
            android:backgroundTint="#a37943"
            android:padding="1dp"
            android:src="@drawable/taylors_ivan" />

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:id="@+id/butchers_menu"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuton"
                    android:text="Butchers"
                    android:textSize="42sp"
                    android:shadowColor="#ffffff"
                    android:shadowDx="1.5"
                    android:shadowDy="1.5"
                    android:shadowRadius="1.8"
                    android:textColor="#a37943"
                    android:paddingBottom="16dp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuton"
                    android:text="Locally sourced meats"
                    android:textSize="24sp"
                    android:textColor="#a37943"
                    android:textAlignment="center"
                    android:paddingBottom="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuton"
                    android:text="Joints cut to size"
                    android:textSize="24sp"
                    android:textColor="#a37943"
                    android:textAlignment="center"
                    android:paddingBottom="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuton"
                    android:text="28 Day matured steaks"
                    android:textSize="24sp"
                    android:textColor="#a37943"
                    android:textAlignment="center"
                    android:paddingBottom="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuton"
                    android:text="@string/sausages"
                    android:textSize="24sp"
                    android:textColor="#a37943"
                    android:textAlignment="center"
                    android:paddingBottom="16dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuton"
                    android:text="@string/bacon"
                    android:textSize="24sp"
                    android:textColor="#a37943"
                    android:textAlignment="center"
                    android:paddingBottom="16dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/neuton"
                    android:text="Game available to order"
                    android:textSize="24sp"
                    android:textColor="#a37943"
                    android:textAlignment="center"
                    android:paddingBottom="64dp"/>



            </LinearLayout>
            <LinearLayout
                android:id="@+id/food_menu"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="@string/hot_cold"
                android:textSize="42sp"
                android:shadowColor="#ffffff"
                android:shadowDx="1.5"
                android:shadowDy="1.5"
                android:shadowRadius="1.8"
                android:textColor="#a37943"
                android:paddingBottom="16dp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="@string/cooked_meat"
                android:textSize="24sp"
                android:textColor="#a37943"
                android:textAlignment="center"
                android:paddingBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="@string/pies"
                android:textSize="24sp"
                android:textColor="#a37943"
                android:textAlignment="center"
                android:paddingBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="Sandwiches"
                android:textSize="24sp"
                android:textColor="#a37943"
                android:textAlignment="center"
                android:paddingBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="Jacket potatoes"
                android:textSize="24sp"
                android:textColor="#a37943"
                android:textAlignment="center"
                android:paddingBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="Traditional meals"
                android:textSize="24sp"
                android:textColor="#a37943"
                android:textAlignment="center"
                android:paddingBottom="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="Burgers"
                android:textSize="24sp"
                android:textColor="#a37943"
                android:textAlignment="center"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuton"
                android:text="Cakes"
                android:textSize="24sp"
                android:textColor="#a37943"
                android:textAlignment="center"
                android:paddingBottom="64dp"/>



            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="Contact us"
            android:textSize="42sp"
            android:shadowColor="#ffffff"
            android:shadowDx="1.5"
            android:shadowDy="1.5"
            android:shadowRadius="1.8"
            android:textColor="#a37943"
            android:paddingBottom="16dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="Oakleigh"
            android:textSize="24sp"
            android:textColor="#a37943"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="Wakefield Road"
            android:textSize="24sp"
            android:textColor="#a37943"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="Ackworth"
            android:textSize="24sp"
            android:textColor="#a37943"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="Pontefract"
            android:textSize="24sp"
            android:textColor="#a37943"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="West Yorkshire"
            android:textSize="24sp"
            android:textColor="#a37943"
            android:textAlignment="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="WF7 7AN"
            android:textSize="24sp"
            android:textColor="#a37943"
            android:textAlignment="center"
            android:paddingBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neuton"
            android:text="07881 095878"
            android:textSize="24sp"
            android:textColor="#a37943"
            android:textAlignment="center"
            android:paddingBottom="32dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/facebook"
                android:padding="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:textSize="24sp"
                android:fontFamily="@font/neuton"
                android:paddingTop="16dp"
                android:textColor="#a37943"/>

        </LinearLayout>


        </LinearLayout>




</ScrollView>
